--- a/pc.css
+++ b/pc.css
@@ -1,3 +1,6 @@
+#movetotop,body>header:first-child::before,header .col-xs-4>a,html::after,html::before{background-position:center;background-repeat:no-repeat}body,html{background:0 0}body::after,html::after,html::before{content:"";position:fixed;top:0;left:0;width:100%;height:100%;z-index:-3}html::before{background-image:url(https://nrirn.github.io/hodussss/cf00.png);background-size:cover}html::after{top:40px;left:5%;width:300px;height:300px;
+
+
 /* 폰트 */
 @font-face { font-family: 'BMEULJIRO'; 
   src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff') format('woff'); 
